# TEST

./: .env  README.md  electron-builder.json  index.html  package-lock.json  package.json
electron/: main.cjs
mirroverse-backend/: fresh_token.txt  pyproject.toml  session_token.txt  test_ai_mounting_with_env.py  test_google_integration.py  test_mcp_pipeline.py  test_openai_integration.py
mirroverse-backend/app/: ai_service.py  auth.py  database.py  engine_modules.py  main.py  models.py
src/: App.tsx  types.ts  utils.ts
src/components/: ChatView.tsx  CreationDetailView.tsx  CreationLibraryView.tsx  GeneratorView.tsx  InteractivePlayer.tsx  LibraryView.tsx  LoginView.tsx  SettingsModal.tsx
src/hooks/: useApiData.ts  useUserStorage.ts
src/services/: aiService.ts  apiService.ts
